--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body>
     <h1>aula de invormática</h1>  
-<p>a vida e curta!!!!!!!!!!!1</p>
+<p>a vida e curta para vc disperdisar com uma meninas</p>
 </body>
 </html>
