--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1>aula de invormática</h1>  
-<p>a vida e curta para vc disperdisar com uma meninas</p>
+ <p>a vida e curta para vc disperdisar com uma meninas</p>
+
+<img src="oi" alt="si lascou">
+
 </body>
+
 </html>
