--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>aula de invormática</h1>  
  <p>a vida e curta para vc disperdisar com uma meninas</p>
 
-<img src="oi" alt="si lascou">
+<img src="oi" alt="si lasco">
 
 </body>
 
